force-app/main/default/objects/MS_IRR__c/MS_IRR__c.object-meta.xml
<CustomObject>
    <label>MS IRR</label>
    <nameField>
        <label>MS IRR Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MS IRR</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>