force-app/main/default/objects/MS_IRR__c/fields/Eff_IRR__c.field-meta.xml
<CustomField>
    <fullName>Eff_IRR__c</fullName>
    <label>Eff IRR</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>