force-app/main/default/objects/MS_IRR__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vacant land</fullName>
            </value>
            <value>
                <fullName>Any Other</fullName>
                <default>true</default>
                <label>Any Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>