force-app/main/default/objects/MS_IRR__c/fields/Type_of_loan__c.field-meta.xml
<CustomField>
    <fullName>Type_of_loan__c</fullName>
    <label>Type of loan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Vacant land</fullName>
            </value>
            <value>
                <fullName>5S employee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>